--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chalk": "^4.1.0",
     "clsx": "^1.1.1",
     "flux": "^3.1.3",
+    "jsontoxml": "^1.0.1",
     "keymirror": "^0.1.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
